working on compelling

--- a/contents/compelling/advantage.tex
+++ b/contents/compelling/advantage.tex
@@ -1,29 +1,37 @@
 \subsection{Advantage}
-Una vez demostrada la relevancia, beneficios y ventajas de la utilizacion de los datos por parte del usuario, es necesario un trabajo minucioso para
-transmitir estos conceptos al usuario de forma clara, sencilla y directa y asi lograr un vinculo que haga crecer el deseo del usuario de profundizar en la materia y
-mantenerse informado. 
-Solo si el usuario entiende la relevancia de los datos y la influencia que estos tienen en su vida diaria, sera posible un compromiso por parte de este.
+Una vez demostrada la relevancia, nos planteamos que beneficios y ventajas que nos puede traer la utilizacion de los datos como usuario. 
+Este objetivo requiere de trabajo minucioso tanto para descubrirlo como para transmitir estos conceptos al usuario de forma clara, 
+sencilla y directa y asi lograr un vinculo que haga crecer la curiosidad del usuario de profundizar en la materia y
+mantenerse informado.
 
-Para conseguir este objetivo, es importante reflejar la informacion de una manera atractiva tanto desde un punto de vista conceptual como funcional, 
-es decir, dejando claro la implicacion de los datos y reflejandolos con una correcta presentacion, que guie al usuario de una manera logica y estructurada.
+Es muy importante pornerse en el lugar del usuario y descubrir que es realmente necesario para el. Solo si el usuario entiende la relevancia de 
+los datos y la influencia que estos tienen en su vida diaria, sera posible un compromiso por parte de este.
 
-Desde un punto de vista conceptual, la informacion debera cubrir una necesidad del usuario, aunque el usuario no sepa a priori que tiene esta necesidad.
-Es decir, aqui entra en juego la representacion de la informacion de una manera que despierte la necesidad de monitorizacion de los datos por parte
+Es decir, la informacion debera cubrir una necesidad del usuario, aunque el usuario no sepa a priori que tiene esta necesidad. Quizas sea 
+nuestro objetivo dejarle ver lo util y ventajoso que puede ser la utilizacion de estos datos.
+
+Cuando tengamos unos datos que se actualizen periodicamente, deberemos de pensar en que manera puedan interesarnos las fluctuacion o que ciertos
+cambios. Aqui entra en juego la representacion de la informacion de una manera que despierte la necesidad de monitorizacion de los datos por parte
 del usuario.
 
-[....].
-
-
-
 \subsubsection{How to solve it} 
-
+En primer lugar descubrir de que manera los datos pueden ayudar a los usuarios. A continuacion se ha de buscar la manera de dejarle ver
+porque son importantes para el y como puede beneficiar el uso de ellos en su vida diaria.
+Si los datos se actualizan periodicamente, hay que analizar que tipo de variaciones son importantes en la vida cotidiana del usuario.
+Realizar un estudio de mercado y ver si ya existen productos que ofrezcan esta informacion. Si este es el caso, se analizara porque no
+resulta atractiva al usuario e intentar mejorarlo.
 
 \subsubsection{How we solve it. Aire Guru} 
+Se le ofrece al usuario una plataforma que le indica su exposicion a la polucion del aire totalmente personalizada si la necesidad de acarrear
+ningun dispositivo para la lectura de los contaminantes.
+Se le presenta una descripcion detallada de como la polucion puede afectar a su vida diaria sin tener que salir de la plataforma
+Se puede ver la exposicion a la polucion del aire desde el 2018 sin tener que haber estado usando la herramienta.
  
 \elsparagraph{Evaluation}  
 \begin{itemize}
-    \done
-    \crossed
+    \done Caracteristica unica, monitorizacion de la exposicion de la polucion completamente personalizada
+    \done Descripcion de los efectos, fuentes contaminantes, descripcion de los contaminantes en una unica plataforma
+    \crossed Presentar como se puede reducir la exposicion a la polucion mas especificamente
     
 \end{itemize}
 \newpage
