--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -1,6 +1,7 @@
 \subsection{Attractive}
- 
-
+Para conseguir este objetivo, es importante reflejar la informacion de una manera atractiva tanto desde un punto de vista conceptual como funcional, 
+es decir, dejando claro la implicacion de los datos y reflejandolos con una correcta presentacion, que guie al usuario de una manera logica y estructurada.
+actual
 \subsubsection{How to solve it} 
 
 
