--- a/contents/compelling/product.tex
+++ b/contents/compelling/product.tex
@@ -1,5 +1,5 @@
 \subsection{Product Relation}
- 
+--porque utilizar nuestro producto y no otro 
 --crear una relacion con el producto
 --diferenciacion del producto 
 
