--- a/contents/compelling/userExperience.tex
+++ b/contents/compelling/userExperience.tex
@@ -1,46 +1,49 @@
 \subsection{User Experience}
- 
---atractive
--workflow
--intuitive
-Disponibilidad --En este caso no se necesitan aparatos que midan los datos
---diseno simple y minimalista
---workflow
+ El sistema puede mostrar los datos de una forma precisa, optimizada, totalmente personaliza y ofrecerle
+ la posibilidad al usuario de mejorar su vida considerablemente, sin embargo, si no proporcionamos una experiencia
+ de usuario agradable y fluida, todos nuestros esfuerzos seran en vano.
+ El usuario debe sentir que el sistema le ofrece la informacion de una manera fluida, limpia, intuitiva, directa y con
+ una secuencia logica.
+  
+Esta secuencia le permitira al usuario la posibilidad de indagar por si mismo, como si la redaccion de una novela se tratara.
 
-Desde un punto de vista funcional se ha de tener en cuante, que para lograr el mayor alcance de usuarios, de distintos tipos, se han
-de repetar las siguientes premisas,  la informacion debe ser presentada en un formato facil de entender por
-el usuario, de una forma logica, que respete un order, es decir, de menos detalles a mas, que le de la posibilidad al usuario de indagar por si mismo, como
-si la redaccion de una novela se tratara.
 La representacion debe estar fuera de toda ambiguidad, no mostrar informacion que resulte enganosa o que haya que dedicar demasiado tiempo fijandonos
 en los detalles para poder interpretarla correctamente.
 Ademas se debera buscar la manera de presentar la informacion de una manera armonica y agradable para el usuario.
-Al represnentar la informacion sera incluido lo basicamente necesario, huyendo siempre de graficas recargadas que solo aporten ruido a la represetacion.
+Al representar la informacion sera incluido lo basicamente necesario, huyendo siempre de graficas recargadas que solo aporten ruido a la represetacion.
 
-\begin{itemize}
-    \item facil de entender
-    \item Analisis del publico al que va dirijido
-    \item agradable
-    \item no enganar
-    \item nivel alto de detalle sin datos personales
-    \item actual
-    \item Herramientas necesarias para que el usuario entienda la informacion y de porque
-    \item formato adecuado para un amplio espectro de usuarios
-    \item Crear familiaridad
-    \item Flexibilidad de seleccion de subdata
-    \item No decoracion que ensucie o distraiga de la informacion principal
-    \item Consecuente, que siga una secuencia logica
-    \item Estudio de las representaciones mas adecuadas para cada tipo de datos
-      \end{itemize}
+Buscaremos crear familiaridad, que el usuario pueda enterder de una forma rapida las estructuras de los datos y 
+le resulte facil de moverse con el minimo tiempo de aprendizaje posible.
+
+Es importante darle al usuario un grado de flexibilidad, que sea capaz de realizar sus propias selecciones para poder ver
+los datos en los que esta interesando.
+
+Estudio de las representaciones mas adecuadas para cada tipo de datos.
+Es importante trabajar en los tiempos y no hacer esperar al usuario
+Es importante que una accion tenga una respuesta aunque esta sea de espera.
     
 \subsubsection{How to solve it} 
-
+Diseno actualizado y moderno, limpio, lejos de decoraciones innecesarias, debera seguir una logica.
+Accion-reaccion 
+Tiempo de aprendizaje minimo, familiaridad, intuitividad
+Flexibilidad
 
 \subsubsection{How we solve it. Aire Guru} 
+Diseno material design, colores combinados no estridentes, simple
+Workflow, del mapa a mas detalle
+Repeticion de estructuras
+respetar colores para las misma funciones
+Filtros en el mapa
+filtros en las graficas
  
 \elsparagraph{Evaluation}  
 \begin{itemize}
-    \done
-    \crossed
+    \done Estetica
+    \done Logica de secuencia
+    \done Familiaridad, repeticion de estructuras y colores que representan lo mismo
+    \done Selecciones
+    \crossed Tiempos de espera
+    \crossed Mas diseno
     
 \end{itemize}
 \newpage
