added some points

--- a/contents/compelling/mission.tex
+++ b/contents/compelling/mission.tex
@@ -1,5 +1,7 @@
 \subsection{Mission}
---mision: atraer usuarios, crear un valor agregado, satisfaccion del usuario
+Nuestra mision aparte de alcanzar el objetivo marcado es atraer usuarios para los que habremos creado un
+valor y asi lograr su satisfaccion.
+ 
 
 \subsubsection{How to solve it} 
 
