--- a/contents/compelling/product.tex
+++ b/contents/compelling/product.tex
@@ -2,6 +2,7 @@
 --porque utilizar nuestro producto y no otro 
 --crear una relacion con el producto
 --diferenciacion del producto 
+Caracteristicas que otros no tienen, datos mas actualizados y acurados, mayor cobertura de informacion
 
 \begin{itemize}
 
