--- a/contents/conclusion.tex
+++ b/contents/conclusion.tex
@@ -1,8 +1,10 @@
 \section{Conclusion}
-\begin{itemize}
-    \item -General conclusion,
-    \item recapitulation,
-    \item main points,
-    \item future work,
-    \item where is available
-\end{itemize}
+En este capitulo se han visto los puntos claves para poder mostrar la informacion de una manera accessible,
+relevante y atractiva al usuario medio. Vemos que algunos puntos se han aplicado satisfactoriamente en la herramienta
+Aire Guru y otros estan aun por aplicar.
+[Recapitulacion]
+Los puntos que se han cumplido satisfactoriamente son los siguientes
+Como trabajo futuro se plantea...
+ 
+
+Aire Guru esta disponible.....
