Machine Translation: Introduction

--- a/contents/introduction/methodology.tex
+++ b/contents/introduction/methodology.tex
@@ -1,6 +1,7 @@
 \subsection*{Structure}
-En este capitulo vamos a ver como hacer los datos accesibles, relevantes y atractivos para 
-el usuario medio. Para cada uno de los apartadados, vamos a ver la teoria, como se ha aplicado
-en el projecto Aire Guru y su evaluacion.
-A continuacion, veremos una evaluacion general de estos tres conceptos y para terminar las 
-conclusiones obtenidas.
+
+In this chapter we will see how to make the data accessible, relevant and attractive for 
+the average user. For each one of the secluded ones, we will see the theory, as it has been applied
+in the Air Guru project and its evaluation.
+Next, we will see a general evaluation of these three concepts and to finish the 
+obtained conclusions.
