--- a/contents/introduction/motivation.tex
+++ b/contents/introduction/motivation.tex
@@ -1,24 +1,23 @@
 \subsection*{Motivation}
-Con el paso de los annos hemos visto en el procesado de los datos una oportunidad de oro, 
-tanto para mejora nuestra vida diaria como para intentar predecir
-eventos futuros. Por esta razon, surge la tendecia de almacenar todos los datos que tenemos 
-a nuestro alrededor con la esperanza de que algun dia sean tratados.
-Como por el momento no tienen ningun fin en concreto, se almacena competamente todo, sin discriminacion.
-Sin saber si en algun momento seran utiles o no.\\
 
-Por otra parte, multiples empresas tanto publicas como privadas, incluidas nuestros gobiernos, 
-en su compromiso por la transparecia y/o esperanza de sacarle provecho, publican estos datos 
-periodicamente.\\
+With the passage of the years we have seen in the processing of the data a golden opportunity, 
+both to improve our daily life and to try to predict
+future events. For this reason, the tendency arises to store all the data we have
+around us with the hope that one day they will be treated.
+As for the moment they have no specific purpose, everything is stored completely, without discrimination.
+Without knowing if at some point they will be useful or not. \\
 
-Aunque estos datos esten disponibles para todos los usuarios, no significa que sean provechosos para el 
-usuario medio, ya que se enfrenta a multiples retos.\\
+On the other hand, multiple companies, both public and private, including our governments, 
+in their commitment to transparency and / or hope to take advantage of it, they publish this data 
+periodically \\
 
-En los siguientes apartados se realizar un recorrido por las etapas necesarias para hacer estos datos
-accesibles, relevantes y atractivos para el usuario medio.
-El objetivo de este capitulo es estipular los puntos necesarios para usar los datos de una manera provechosa y
-que nos ayude en nuestro dia a dia de una forma util. Estos conceptos se han aplicado en el proyecto Aire Guru, 
-que acerca los datos a los usuarios de una manera facil, amigable, compresible y adaptados a sus necesidades.\\
+Although these data are available to all users, it does not mean that they are useful for the 
+average user, since he faces multiple challenges. \\
 
-Aire Guru es una herramienta web para la monitorizacion personalizada de la calidad del aire en Malaga.
+In the following sections, a tour through the necessary steps to make this data
+accessible, relevant and attractive for the average user.
+The objective of this chapter is to stipulate the necessary points to use the data in a profitable manner and
+to help us in our day to day in a useful way. These concepts have been applied in the Air Guru project,
+that brings the data to users in an easy, friendly, compressible and adapted to their needs. \\
 
-
+Aire Guru is a web tool for personalized monitoring of air quality in Malaga.
