moving points around after full reading of the first point

--- a/contents/accessible/format.tex
+++ b/contents/accessible/format.tex
@@ -18,14 +18,14 @@ entre sexos, utilizaremos un grafico de tartas.
 
 \subsubsection{How we solve it. Aire Guru} 
 La herramienta Aire guru presenta la informacion en el idioma nativo de la ciudad y se utiliza un lenguaje sencillo y directo.
-See utiliza el mismo estilo, colores e iconografia en todo el diseno para que el usuario se familierize rapidamente y pueda
-prestar atencion al significado de los datos en vez de perderse en el diseno e intentar encontrar su significado.//
+Se utilizan colores y recursos graficos como iconos. Ademas se ha elegido una estructura para representar los datos y se repite en disdintas 
+partes en vez de crear una visualizacion distinta, asi el usuario solo debe asimilar una unica formula.
 
 Unos de los objetivos es representa la contaminacion por zonas de la ciudad, por lo que se ha utilizado un mapa sobre el que se representa
  el AQI general calculado. Este es un formato mas legible para los usuarios ya que no tiene que trabajar para realizar una imagen visual
  de los distintos lugares de la ciudad. Este indice mustra un indicador con cinco niveles representados por una escala de colores desde el 
  turquesa hasta el rojo ("Bueno" "Aceptable""Pobre" "Malo" e "Insalubre"). La razon de esta eleccion es porqu eson los colores oficiales y 
- asi se evita crear confusion al usuario.
+ asi se evita crear confusion al usuario si consulta las fuentes oficiales.
  \newpage
  \begin{figure}[ht]
     \centering
@@ -33,7 +33,7 @@ Unos de los objetivos es representa la contaminacion por zonas de la ciudad, por
     \caption{EAQI Levels}
 \end{figure}
 
-Nuestra plataforma introduce ademas una iconografica para ayudar al usuario a tener una idea directa de la situacion, ya que son mas 
+La iconografica utilizada para ayudar al usuario a tener una idea directa de la situacion, ya que son mas 
 explicativos que los colores. En caso de peligro, queda bien representado con el color rojo, pero en el caso del azul o verde, en nuestra cultura, no
 tenemos definido un estado para estos colores.\\
 \begin{figure}[ht]
