--- a/contents/accessible/knowAbout.tex
+++ b/contents/accessible/knowAbout.tex
@@ -24,6 +24,7 @@ aireGuruFinalist
 
 \elsparagraph{Evaluation}  
 \begin{itemize}
+\done Actualmente esta publicado en el portal de datos abiertos del Ayuntamiento de Malaga.
 \crossed Deberia trabajarse mas en la publicidad de la plataforma y darla a conocer.  
 \end{itemize}
 \newpage
