--- a/contents/compelling/mission.tex
+++ b/contents/compelling/mission.tex
@@ -2,7 +2,19 @@
 Nuestra mision aparte de alcanzar el objetivo marcado es atraer usuarios para los que habremos creado un
 valor y asi lograr su satisfaccion.
  
+--porque utilizar nuestro producto y no otro 
+--crear una relacion con el producto
+--diferenciacion del producto 
+Caracteristicas que otros no tienen, datos mas actualizados y acurados, mayor cobertura de informacion
+\begin{itemize}
 
+    \item usuario no sabe que tiene la necesidad
+    \item necesidad para el usuario
+    \item fundamental para la vida diaria
+    \item mejora para sus tareas diarias
+    \item personalizacion
+    \item Ligar la informacion a la resolucion de problemas comunes
+    \item \end{itemize}
 \subsubsection{How to solve it} 
 
 
