--- a/contents/compelling/userExperience.tex
+++ b/contents/compelling/userExperience.tex
@@ -35,7 +35,8 @@ Repeticion de estructuras
 respetar colores para las misma funciones
 Filtros en el mapa
 filtros en las graficas
- 
+Se utiliza el mismo estilo, colores e iconografia en todo el diseno para que el usuario se familierize rapidamente y pueda
+prestar atencion al significado de los datos en vez de perderse en el diseno e intentar encontrar su significado. 
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done Estetica
