--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -6,7 +6,18 @@ actual
 
 
 \subsubsection{How we solve it. Aire Guru} 
- 
+Aire Guru se comprende de distintas secciones. Mediante la seleccion de un punto en el mapa, nos
+mostrara informacion detallada de este punto. A continuacion, cuenta con una seccion que filtrara la informacion acorde a las preferencias del usuario
+y para concluir, muestra el historial de los contaminantes desde 2018 y el historial de la polucion al que el usuario ha estado
+expuesto.
+
+Es de preveer que el usuario estara interesado en el nivel de polucion al que esta expuesto a tiempo real, por ello, para usuarios
+que esten identificados y accedan a compartir su ubicacion, Aire Guru mostrara directeramente la polucion en el punto en el 
+que se encuentra.
+
+El workflow de las distintas secciones de Aire Guru esta detalladamente estudiada. Como vemos en la Figura X. Aire Guru. Landing page. Top section, el punto de partida es la localizacion que nos interesa,
+a continuacion se muestra la informacion general de este punto, el AQI general, despues el AQI de cada uno de los contaminantes que componen el 
+AQI general y por ultimo los valores numericos de cada uno de los contaminantes. Como vemos vamos de menos a mas detalle.
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done
