--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -2,6 +2,11 @@
 Para conseguir este objetivo, es importante reflejar la informacion de una manera atractiva tanto desde un punto de vista conceptual como funcional, 
 es decir, dejando claro la implicacion de los datos y reflejandolos con una correcta presentacion, que guie al usuario de una manera logica y estructurada.
 actual
+Este concepto es tambien aplicable a la representacion, debe seguir el mismo principio, huiremos de decoraciones inecesarias que hagan al 
+usuario perderse, solo debe contener la informacion necesaria para poder ser interpretada correctamente, es decir,
+toda representacion tienen que contarnos lo que significa sin tener que estar accediendo continuamente a informacion
+extra.
+
 \subsubsection{How to solve it} 
 
 
