--- a/contents/relevant.tex
+++ b/contents/relevant.tex
@@ -1,10 +1,10 @@
 \newpage
 \section{Relevant}
  
-Una buena representacion de los datos no consiste en presentarlos todos para que el usuario tenga la mayor informacion posible,
-consiste en mostrarle los datos necesarios para que pueda hacer una lectura directa de la situacion.\\
+Una buena representacion del conjunto de datos no consiste en presentarlo todo para que el usuario tenga la mayor informacion posible,
+consiste en mostrarle el subconjunto de datos o los valores calculados necesarios para que pueda hacer una lectura directa de la situacion.\\
 
-En este apartado veremos el refinado de los datos para ofrecer al usuario una informacion relevante y de calidad.
+En este apartado veremos el refinado del conjunto de datos para ofrecer al usuario una informacion relevante y de calidad.
 
 \input{contents/relevant/model.tex}
 \input{contents/relevant/dataSetQuality.tex}
