--- a/contents/relevant/dataSetQuality.tex
+++ b/contents/relevant/dataSetQuality.tex
@@ -1,8 +1,8 @@
-\subsection{Calidad de los datos}
- 
-Una vez estipulados los campos que se requieren de la fuende de datos de origen, hay que serciorarse en primer lugar de la credibilidad
-de los datos, es decir, la fuente debe ser fiable, en la descripcion de los datos debe contar una seccion dende explique la procedencia
-de los datos. Ademas, habra que comprobar las siguientes premisas para cada unos de los campos representados en los datos de origen:\\
+\subsection{Credibilidad y calidad de los datos}
+Es indispensable  serciorarse en primer lugar de la credibilidad del conjunto de datos, es decir, la fuente debe ser fiable. Normalmente,
+en la descripcion de los datos debe contar una seccion dende explique la procedencia del conjunto datos.
+
+Respecto a la calidad del conjunto de datos, se puede medir acorde a las siguientes caracteristicas de los valores de los campos:\\
 
 \textbf{Precision}. Unidades de medida en la escala correcta. Por ejemplo, si estamos mediendo la altura
 de las personas, carecera de sentido proporcionar estas medidas en metros, ya que los posibles valores, seran 0, 1 y 2.\\
