--- a/contents/relevant/model.tex
+++ b/contents/relevant/model.tex
@@ -1,30 +1,26 @@
 \subsection{Diseno}
-Para realizar una buena seleccion de los datos que son relevantes o la combinacion de estos, es imprescindible unos 
+Para realizar una buena seleccion en el conjunto de datos de los campos que son relevantes o la combinacion de estos, es imprescindible unos 
 conocimientos solidos sobre la materia a tratar. Por ello, es fundamental dedicarle el tiempo necesario para enter la
-importancia de los datos, que beneficios nos puede aportar o que datos nos perjudican.
+importancia del concepto, que beneficios nos puede aportar o que situaciones nos perjudican.
 Los puntos que deben quedar claro en la fase de diseno son:\\
 
  \textbf{Objetivo}. Conceptualmente, que problema queremos solventar o clarificar. Es muy importante que tengamos un objetivo claro,
     incluso si no se cuentan con conocimientos previos de la materia, tener un objetivo bien definido nos ayuda a encontrar la solucion o 
-    describirla con mas claridad al experto.\\
+    describirla con mas claridad al experto para que este nos describa como solventar el problema.\\
 
- \textbf{Puntos importantes. Valores destacables}. Como mencionamos anteriormente, nuestro objetivo no es mostrar todos los datos, sino
-    que se trata de proporcionarle los datos importantes al usuario para poder descubrir los valores significativos, los que tienen influencia en
+ \textbf{Puntos importantes. Situaciones destacables}. Como mencionamos anteriormente, nuestro objetivo no es mostrar todos los valores, sino
+    que se trata de proporcionarle la informacion importante al usuario para poder descubrir las situaciones significativas, los que tienen influencia en
     nosotros, ya sea positivo o negativo. A nivel mas tecnico, serian los limites o que valores de que datos son los que nos proporcinan una informacion
     de una situacion excepcional, o los valores que estamos intentando identificar mas facilmente.\\
 
  \textbf{Data workflow}. Diseno del flujo de informacion, que quede claro como se llega de un punto a otros, por ejemplo de una representacion
     simple a mas detallada o compleja. Si el usuario entiende los conceptos basicos, le sera mas facil de entender el concepto mas desarrollado.
 
-
-Respecto al conjunto de datos, una vez marcada una meta, deberemos estipular cuales son los campos necesarios del conjunto de datos que necesitamos para representar la informacion
-disenada. Es momento de realizar un analisis de los datos proporcionados y ver en la lista de los campos que nos ofrece la fuente, si serian
-suficientes para alcanzar el objetivo marcado, si no directamente con sus valores, con la combinacion de ellos.
-
 \subsubsection{How to solve it} 
-Marcarnos un objetivo, estipulamos los campos necesarios, seleccionamos estos campos en el conjunto de datos. 
-Estipulamos los valores destacables que les proporcionen mas informacion al usuario como las Situaciones excepcionales, o lo que estamos buscando.
-
+Una vez marcada una meta, deberemos estipular cuales son los campos necesarios del conjunto de datos que necesitamos para representar la informacion
+disenada.Es decir, realizamos la seleccion de los campos que nos interesen. Es momento de realizar un analisis de los datos proporcionados y ver en 
+la lista de los campos que nos ofrece la fuente, si serian suficientes para alcanzar el objetivo marcado, si no directamente con sus valores, con la combinacion de ellos.
+A continuacion estipulamos los valores destacables que les proporcionen mas informacion al usuario como las situaciones excepcionales, o lo que estamos buscando.
 \subsubsection{How we solve it. Aire Guru} 
 Nuestro objetivo principal es crear el concienciamiento de la importancia de la polucion del aire en nuestra salud. Para ello investigamos diferentes conceptos:
 \begin{itemize}
@@ -46,8 +42,9 @@ afectan de distinto modo a distintas enfermedades.\\
 Como el objetivo principal es la concienciacion, aportaremos todos estos datos de una manera organizada en el glosario de Aire Guru.\\
 
 Una vez seleccionados estos contaminantes, verificamos si contamos con estos datos en nuestro conjunto de datos. Como mencionamos anteriormente algunas muestras
-muestran medidas cualitativas y otras no cuentan con las medidas. En este caso se deciden los siguientes valores Bueno:50, Aceptable:150,Pobre:300, Malo:400, Insalubre:500
-y se le indicara al usuario cuando el valor es cualitativo.\\
+muestran medidas de estaciones fijas y/o moviles y estas pueden ser cuantitativas o cualitativas y otras no cuentan con las medidas. Deberemos seleccionar la que
+nos aporte la mayor informacion o la que sea mas precisa, en este caso prevalecera la medida cuantitativa a la cualitativa y en el caso de que solo haya cualitativa
+se deciden los siguientes valores Bueno:50, Aceptable:150,Pobre:300, Malo:400, Insalubre:500 y se le indicara al usuario cuando el valor es cualitativo.\\
 
 
 En este punto que sabemos como afecta la polucion del aire en nuestra salud, vamos a dejar claro en nuestras representaciones cuales son los valores indeseables,
