--- a/contents/relevant/useful.tex
+++ b/contents/relevant/useful.tex
@@ -1,20 +1,14 @@
 \subsection{Util}
 Usualmente cometemos el error de intentar mantener al usuario lo mas informado posible y le ofrecemos datos que
-no aportan informacion nueva, es redundate.
-Debemos centrarnos en que nuestro objetivo no es crear usuarios especializados en la materia, sino aportarles la
-informacion de una manera que la puedan aplicar a su vida diaria y asi mejorarla, por lo que huiremos de datos
-tecnicos, dificiles de interpretar.
+no aportan informacion nueva, es redundate. Toda informacion vana, que no haga ninguna aportacion
+al objetivo marcado tambien queda fuera de ser util.No queremos que el usuario se distraga o se pierda en medio
+ de una piscina de datos completa pero compleja que para el no tenga ningun sentido. 
 
-Como mencionamos anteriormente, huiremos de toda aquella informacion vana, que no haga ninguna aportacion
-al objetivo marcado. No queremos que el usuario se distraga o se pierda en medio de una piscina de datos completa
-pero compleja que para el no tenga ningun sentido. 
+El objetivo no es crear usuarios especializados en la materia, sino aportarles la
+informacion de una manera que la puedan aplicar a su vida diaria y asi mejorarla, mostrar datos
+tecnicos, dificiles de interpretar solo hara que el usuario los evite
 
-Respecto a la representacion, debe seguir el mismo principio, huiremos de decoraciones inecesarias que hagan al 
-usuario perderse, solo debe contener la informacion necesaria para poder ser interpretada correctamente, es decir,
-toda representacion tienen que contarnos lo que significa sin tener que estar accediendo continuamente a informacion
-extra.
-
-En caso complejos, los conceptos que no sean de uso diario para los usuario, podremos poner informacion
+En caso complejos, los conceptos que no sean de uso diario para los usuario, podremos recurrir informacion
 complementaria a su disposicion para que el usuario pueda informarse sobre el significado de los datos 
 representados, esta practica proporcionara al usuario un mayor dominio del concepto y podra estar mas
 seguro de su lectura de los datos, ya que cuando dirigimos al usuario a fuentes oficiales de informacion, donde puedan 
@@ -32,7 +26,7 @@ El conjunto de datos utilizado contiene datos como el indicador de la estacion d
 y medidas extra especificas para una aplicacion que proporciona la misma empresa que recoge los datos. Para nuestra
 herramienta, estos datos no son utiles.
 Para nuestra herramienta solo se han utilizado las coordenadas donde se encuentra la estacion de medicion, el momento en 
-el que se realizo la medida y la medida mas relevante de los cinco contaminantes Co, No2, O3, Pm1, Pm 2.5 y Pm10.
+el que se realizo la medida y el valor mas relevante de los cinco contaminantes Co, No2, O3, Pm1, Pm 2.5 y Pm10.
 
 Ademas, la medida es unica para todos y el general, el AQI, los rangos son exactamente los mismos para todos, asi el usuario
 solo tiene que hacer el esfuerzo de enterder un unico concepto. 
