--- a/contents/relevant/userOriented.tex
+++ b/contents/relevant/userOriented.tex
@@ -3,10 +3,10 @@ Una gran parte del objetivo marcado en el apartado 3.1 Diseno, viene definido po
 al usuario, ya que este, es nuestro cliente final y al que pretendermos ayudar.\\
 
 
-Tendremos que definir las necesidades que muestran los usuarios en combinacion con las carencias del mercado.
-Para ello tendremos que decidir si nuestro objetivo esta dirigido a un publico de gran dimension, por lo que tendremos que
-que identificar las necesidades homogeneas del usuario medio o si el objetivo esta enfocado a un tipo de usuario
-especifico, con necesidades caracteristicas.\\
+Deberemos ser conscientes de necesidades que muestran los usuarios en combinacion con las carencias del mercado ya que
+nos ayudara a saber cual puede ser la demanda o el hueco que aun no esta cubierto.
+Tanto si nuestro publico objetivo, es unico, es decir tomar todos los tipos de usuarios por igual, considerando el 
+usuario medio, como para un usuario caracteristico, deberemos saber las caracteristicas homogeneas de nuestro grupo.
 
 Por lo tanto necesitamos un estudio actual sobre el nivel psicologico, social y economico del grupo objetivo, para descubrir, no solo
 las necesidades, pero tambien los deseos, que le gustaria tener y sus demandas, que quieren.
@@ -15,7 +15,7 @@ Una vez los usuarios tengan acceso a los datos tal y como se los proporcionamos,
 seria ideal poder realizar un analisis del comportamiento del usuario para ve sus pautas respecto a los datos obtenidos.
 
 \subsubsection{How to solve it} 
-Es importante definir a que tipo de usuarios va dirigido. Estudiar tanto sus caracteristicas como la situacion del
+Definir a que tipo de usuarios va dirigido. Estudiar tanto sus caracteristicas como la situacion del
 mercado.
 Utilizar un mecanismo que nos ayude a obtener una retroalimentacion, ya sea por un sistema de puntualizaciones, test o
 un mecanismo automatico que permita conocer el comportamiento del usuario. Tambien podremos optar por la combinacion de ambas 
@@ -42,7 +42,7 @@ pudimos ver las siguientes carencias:
     \item Sin informacion dedicada por condicion medica. 
 \end{itemize}
 
-Una vez implementado, probamos la aplicacion con 14 usuarios. Nuestra herramienta integra Google Analytis que nos permite saber el 
+Una vez implementado, probamos la herramienta con 14 usuarios. Nuestra herramienta integra Google Analytis que nos permite saber el 
 comportamiento de los usuarios, como a cuantas paginas acceden, a cuales y cuanto tiempo permanencen en ella. Ademas, finalizada la prueba,
 se realizo una encuesta para medir no solo el nivel de satisfaccion, pero tambien para comprobar la utilidad y si habia conseguido el objetivo.
 \begin{figure}[ht]
