--- a/contents/relevant/personalized.tex
+++ b/contents/relevant/personalized.tex
@@ -3,19 +3,19 @@ Hasta ahora hemos vistos diferentes parametros para considerar los datos relevan
 centraremos a nivel personal.
 Cada usuario es unico al igual que su situacion personal, por eso tendremos que buscar la manera de que los datos se 
 adapten a los usuarios. Ofrecerle una informacion no solo relevante a nivel general pero a nivel particular.
-Para ello deberemos plantearnos que necesitariamos que nos dijeran los datos en mi caso, por el lugar en el que vivo, por
-mi salud, situacion familiar, algo que nos caracterize.
+Plantearse que necesitariamos que nos dijeran los datos en mi caso, por el lugar en el que vivo, por
+mi salud, situacion familiar, algo que nos caracterize nos puede ayudar.
 
-
+En muchos de los casos, no podremos personalizarlo completamente, pero podemos buscar puntos comunes en subgrupos de 
+usuarios,a partir de este punto hay que estudiar las distintas casos que se pueden dar y realizar una seleccion de los que son 
+mas comunes.
 \subsubsection{How to solve it} 
 
- Estudiar en que manera los datos van a ayudar al usuario y a partir de este punto, hacerlo mas especifico, de esta manera
+ Estudiar en que manera los datos van a ayudar al usuario o a los subgrupos y a partir de este punto, hacerlo mas especifico, de esta manera
  pasaremos de obtener datos relevantes de manera general a ser relevantes de manera personal. Hay que pensar en el 
  usuario, no en los usuarios y buscar la manera de encontrar los resultados que se le adapten especificamente a el.
 
- En muchos de los casos, no podremos personalizarlo completamente, pero podemos buscar puntos comunes en subgrupos de 
- usuarios,a partir de este punto hay que estudiar las distintas casos que se pueden dar y realizar una seleccion de los que son 
- mas comunes.
+
 
  \subsubsection{How we solve it. Aire Guru} 
 A todos nos interesa la polucion que nos rodea, ya que es importate para nuestra salud, por esta razon, la herramienta
@@ -37,7 +37,8 @@ se ven afectadas por algun contaminante.
   
   \caption{Medical Condition Filter}
     \end{figure}
- Como vemos, en cada uno de los casos, nos deberemos fijar en una seleccion de componentes.
+ Como vemos, en cada uno de los casos, por cada condicion medica, muestra un subconjunto de agentes contaminantes,
+ los que mas le influyen a cada condicion medica.
 
  Otra funcionalidad de personalizacion es la representacion de la exposicion a la polucion para cada usuario. 
  Como vemos en la figura X. Personal Records, el usuario es capaz de ver la polucion que le ha rodeado especificamente
