--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -8,7 +8,7 @@ toda representacion tienen que contarnos lo que significa sin tener que estar ac
 extra.
 
 \subsubsection{How to solve it} 
-
+Elementos de la vida real
 
 \subsubsection{How we solve it. Aire Guru} 
 Aire Guru se comprende de distintas secciones. Mediante la seleccion de un punto en el mapa, nos
